--- a/package.json
+++ b/package.json
@@ -50,13 +50,15 @@
 		"date-fns": "^3.6.0",
 		"embla-carousel-react": "^8.3.0",
 		"input-otp": "^1.2.4",
+		"jsonwebtoken": "^9.0.2",
+		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.462.0",
 		"next-themes": "^0.4.6",
 		"postcss-preset-mantine": "^1.17.0",
 		"react": "^18.3.1",
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^18.3.1",
-		"react-hook-form": "^7.60.0",
+		"react-hook-form": "^7.62.0",
 		"react-icons": "^5.5.0",
 		"react-phone-input-2": "^2.15.1",
 		"react-redux": "^9.2.0",
