--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"@radix-ui/react-collapsible": "^1.1.0",
 		"@radix-ui/react-context-menu": "^2.2.1",
 		"@radix-ui/react-dialog": "^1.1.14",
-		"@radix-ui/react-dropdown-menu": "^2.1.1",
+		"@radix-ui/react-dropdown-menu": "^2.1.15",
 		"@radix-ui/react-hover-card": "^1.1.1",
 		"@radix-ui/react-label": "^2.1.7",
 		"@radix-ui/react-menubar": "^1.1.1",
@@ -56,6 +56,7 @@
 		"next-themes": "^0.4.6",
 		"postcss-preset-mantine": "^1.17.0",
 		"react": "^18.3.1",
+		"react-datepicker": "^8.4.0",
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.62.0",
@@ -64,6 +65,7 @@
 		"react-redux": "^9.2.0",
 		"react-resizable-panels": "^2.1.3",
 		"react-router-dom": "^6.26.2",
+		"react-time-picker": "^8.0.2",
 		"recharts": "^2.12.7",
 		"redux-persist": "^6.0.0",
 		"sonner": "^2.0.5",
