--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
 		"input-otp": "^1.2.4",
 		"jsonwebtoken": "^9.0.2",
 		"jwt-decode": "^4.0.0",
-		"lucide-react": "^0.462.0",
+		"lucide-react": "^0.539.0",
+		"motion": "^12.23.12",
 		"next-themes": "^0.4.6",
 		"postcss-preset-mantine": "^1.17.0",
 		"react": "^18.3.1",
