--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"@radix-ui/react-tooltip": "^1.2.7",
 		"@reduxjs/toolkit": "^2.8.2",
 		"@tanstack/react-query": "^5.56.2",
+		"axios": "^1.12.2",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
@@ -79,6 +80,7 @@
 	"devDependencies": {
 		"@eslint/js": "^9.9.0",
 		"@tailwindcss/typography": "^0.5.15",
+		"@types/axios": "^0.9.36",
 		"@types/node": "^22.5.5",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
