--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.62.0",
+		"react-hot-toast": "^2.6.0",
 		"react-icons": "^5.5.0",
 		"react-phone-input-2": "^2.15.1",
 		"react-redux": "^9.2.0",
