--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"react-datepicker": "^8.4.0",
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^18.3.1",
+		"react-dropzone": "^14.3.8",
 		"react-hook-form": "^7.62.0",
 		"react-hot-toast": "^2.6.0",
 		"react-icons": "^5.5.0",
@@ -85,6 +86,7 @@
 		"@types/node": "^22.5.5",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
+		"@types/react-dropzone": "^4.2.2",
 		"@vitejs/plugin-react-swc": "^3.5.0",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.9.0",
