--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
 		"recharts": "^2.12.7",
 		"redux-persist": "^6.0.0",
 		"sonner": "^2.0.5",
+		"swiper": "^12.0.2",
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss-animate": "^1.0.7",
 		"vaul": "^0.9.3",
