--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
 		"cmdk": "^1.1.1",
 		"date-fns": "^3.6.0",
 		"embla-carousel-react": "^8.3.0",
+		"i18next": "^25.6.0",
+		"i18next-browser-languagedetector": "^8.2.0",
+		"i18next-http-backend": "^3.0.2",
 		"input-otp": "^1.2.4",
 		"jsonwebtoken": "^9.0.2",
 		"jwt-decode": "^4.0.0",
@@ -64,6 +67,7 @@
 		"react-dropzone": "^14.3.8",
 		"react-hook-form": "^7.62.0",
 		"react-hot-toast": "^2.6.0",
+		"react-i18next": "^16.2.0",
 		"react-icons": "^5.5.0",
 		"react-phone-input-2": "^2.15.1",
 		"react-redux": "^9.2.0",
